manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-webhook
  labels:
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: webhook
